--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -42,6 +42,10 @@ $mid-grey: rgb(153, 153, 153) !default;
 /// @type Color
 $dark-grey: rgb(68, 68, 68) !default;
 
+/// Title color
+/// @type Color
+$title-color: rgb(21, 255, 0) !default;
+
 
 
 
